# cdc-demo

./: .editorconfig  .env  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  bandit.yaml  docker-compose.yml  mypy.webapp.ini  ruff.toml
.github/: release-drafter.yml
.github/workflows/: autolabel-pr.yml  pre-commit.yml
connectors/: auto-create-connector.sh
connectors/connect-configs/: es-connector.json  postgres-connector.json
es/: elasticsearch.yml
kibana/: kibana.yml
pgadmin/: pgpass  servers.json
sink-connect/connect-plugins/confluentinc-kafka-connect-elasticsearch-14.1.2/: manifest.json
sink-connect/connect-plugins/confluentinc-kafka-connect-elasticsearch-14.1.2/doc/notices/: NOTICE-httpasyncclient-4.1.1.txt  NOTICE-httpclient-4.5.1.txt  NOTICE-httpcore-nio-4.4.4.txt
webapp/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
webapp/app/: deps.py  main.py  prestart.py
webapp/app/alembic/: env.py
webapp/app/alembic/versions/: 282e41766354_.py  a7fd7bbc6040_.py
webapp/app/configs/: config.yml  logging.json
webapp/app/core/: custom_logging.py  db_connection.py  es_connection.py  settings.py
webapp/app/db_models/: base.py  item.py
webapp/app/db_repository/: __init__.py  base.py  item.py
webapp/app/es_models/: item.py
webapp/app/es_repository/: base.py  item.py
webapp/app/routers/: item.py
webapp/app/schemas/: item.py  optional.py
webapp/app/utils/: pagination.py
webapp/scripts/: prestart.sh  start.sh
