[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi[all]>=0.115.5",
    "fastapi-pagination[sqlalchemy]>=0.12.34",
    "pydantic>=2.10.1",
    "pydantic-extra-types>=2.10.0",
    "pydantic-settings[yaml]>=2.6.1",
    "pytz>=2024.2",
    "uvicorn[standard]>=0.32.1",
    "loguru>=0.7.2",
    "tenacity>=9.0.0",
    "requests>=2.32.3",
    "jinja2>=3.1.4",
    "orjson>=3.10,<4",
    "sse-starlette>=2.1.3",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.30.0",
    "elasticsearch[async]>=8.17.0",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
]
dev-dependencies = [
    "black",
    "pylint",
    "flake8",
    "isort",
    "mypy",
    "pre-commit",
    "flake8-blind-except",
    "flake8-bandit",
    "flake8-docstrings",
    "flake8-logging-format",
    "flake8-print",
    "autoflake",
    "types-geoip2",
    "types-pytz",
    "types-redis",
    "bandit",
    "loguru-mypy",
    "pytest",
]
